# kaggle-notebooks

./: .gitignore  pyproject.toml
notebooks/: calorie-prediction-using-catboost-and-lightgbm.ipynb  chronic_kidney_disease.ipynb
