[project]
name = "kaggle-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.2",
    "kagglehub>=0.3.11",
    "lightgbm>=4.6.0",
    "missingno>=0.5.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
]
